--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ body{
     left: 10px;
     font-size: 13px;
 }
+    .hide{
+        display: none;
+    }
+
     #loading .text{
         padding: 4px 8px;
         position: absolute;
@@ -51,6 +55,7 @@ body{
         width: fit-content;
         background-color: #EC3950;
         border-radius: 5px;
+        cursor: pointer;
         /* font-weight: bold; */
     }
 
@@ -152,7 +157,7 @@ body{
     }
 
     .disabled{
-        background-color: rgb(196, 196, 196);
+        background-color: rgb(172, 172, 172);
     }
 
 #buttons{
@@ -234,12 +239,13 @@ body{
         font-size: 12px;
     }
 
-#status{
+#toast{
     height: 20px;
     width: 100%;
-    bottom: 0px;
+    bottom: -20px;
+    opacity: 0;
 }
-    #status span{
+    #toast span{
         line-height: 17px;
         white-space: nowrap;
         height: 16px;
@@ -386,19 +392,21 @@ to {
 
 .shake {
     animation-name: shake;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
 }
 
 @keyframes shake {
     from, to {
-        transform: translate3d(0, 0, 0);
+        margin-left: 0;
     }
 
     10%, 30%, 50%, 70%, 90% {
-        transform: translate3d(-10px, 0, 0);
+        margin-left: -10px;
     }
 
     20%, 40%, 60%, 80% {
-        transform: translate3d(10px, 0, 0);
+        margin-left: 10px;
     }
 }
 
