--- a/style.css
+++ b/style.css
@@ -221,7 +221,9 @@ body{
     min-width: 250px;
     text-align: center;
     position: relative;
-    text-indent: 5px;
+    /* text-indent: 5px; */
+    opacity: 0;
+    left: 75%;
 }
     #qoute .qoute_right{
         position: absolute;
@@ -480,21 +482,27 @@ body{
     }
   
     to {
-      opacity: 0
+      opacity: 0;
     }
 }
 
 .slide-in{
     animation: slide_in;
     animation-duration: 0.5s;
-    animation-timing-function: ease-out;
+    animation-delay: 0.3s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-in-out;
 }
 @keyframes slide_in {
     from {
+        opacity: 0;
         left: 75%;
     }
-  
+    50%{
+        opacity: 1;
+    }
     to {
+        opacity: 1;
         left: 50%;
     }
 }
